--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.2",
     "@graphql-tools/schema": "^10.0.30",
     "@types/graphql": "^14.5.0",
     "bcryptjs": "^3.0.3",
@@ -21,8 +22,10 @@
     "express": "^5.2.1",
     "graphql": "^16.12.0",
     "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^5.16.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "ws": "^8.18.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
