--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.ts"
+    "start": "node dist/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -35,8 +36,12 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.2",
+    "@types/supertest": "^6.0.3",
+    "@types/ws": "^8.18.1",
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^11.0.0",
     "nodemon": "^3.1.11",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
