--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "seed": "ts-node src/seed.ts"
   },
   "keywords": [],
   "author": "",
