--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,9 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "lib": ["ES2022", "ES2018.asynciterable"]
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "tests"
+  ]
 }
